// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`suite resolve > awaiting suite > should resolve when all tests finish and afterEach() runs 1`] = `
{
  "field_1": SummaryBase {
    "errorCount": 1,
    "errors": [
      "field_statement_1",
    ],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": true,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 1,
    "errors": [
      "field_statement_3",
    ],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`suite resolve > should immediately return all sync fields 1`] = `
{
  "field_1": SummaryBase {
    "errorCount": 1,
    "errors": [
      "field_statement_1",
    ],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 1,
    "errors": [
      "field_statement_2",
    ],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 1,
    "errors": [
      "field_statement_3",
    ],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;
